test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: dev-test-ns
  labels:
    app: test-pod
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sleep", "3600"]
